fix: Assign proper table type for `kafka-safe` and `upsert-kafka-safe` connectors (#2179)